[package]
name = "cumulus-primitives-core"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# Substrate
sp-api = { git = "https://github.com/moondance-labs/substrate", default-features = false, branch = "tanssi-polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/moondance-labs/substrate", default-features = false, branch = "tanssi-polkadot-v1.0.0" }
sp-std = { git = "https://github.com/moondance-labs/substrate", default-features = false, branch = "tanssi-polkadot-v1.0.0" }
sp-trie = { git = "https://github.com/moondance-labs/substrate", default-features = false, branch = "tanssi-polkadot-v1.0.0" }

# Polkadot
polkadot-core-primitives = { git = "https://github.com/moondance-labs/polkadot", default-features = false, branch = "tanssi-polkadot-v1.0.0" }
polkadot-parachain = { git = "https://github.com/moondance-labs/polkadot", default-features = false, branch = "tanssi-polkadot-v1.0.0" }
polkadot-primitives = { git = "https://github.com/moondance-labs/polkadot", default-features = false, branch = "tanssi-polkadot-v1.0.0" }
xcm = { git = "https://github.com/moondance-labs/polkadot", default-features = false, branch = "tanssi-polkadot-v1.0.0" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
	"polkadot-primitives/std",
]
